--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "routes": [
+  "redirects": [
     {
-      "src": "/(.*)",
-      "status": 404
+      "source": "/:path*",
+      "destination": "/404",
+      "permanent": false
     }
   ]
 }
